# alpaca-trader-rs

./: .env.example  .git_commit_msg.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  codecov.yml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: README.md  account-management.md  apca-parity.md  api-research.md  architecture.md  credentials-setup.md  future-features.md  github-actions.md  library.md  licensing.md  phase2-logging.md  phase2-research.md  preferences-modal-design.md  testing.md  ui-mockups.md
src/: app.rs  client.rs  clipboard.rs  commands.rs  config.rs  credentials.rs  events.rs  lib.rs  logging.rs  main.rs  prefs.rs  types.rs  update.rs
src/handlers/: commands.rs  input.rs  mod.rs  rest.rs
src/input/: mod.rs  modal.rs  mouse.rs  orders.rs  positions.rs  search.rs  validation.rs  watchlist.rs
src/stream/: account.rs  market.rs  mod.rs
src/ui/: account.rs  charts.rs  dashboard.rs  formatting.rs  mod.rs  modals.rs  orders.rs  positions.rs  test_helpers.rs  theme.rs  watchlist.rs
tests/: client_tests.rs
