[package]
name = "alpaca-trader-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]

[[bin]]
name = "alpaca-trader"
path = "src/main.rs"

[lib]
name = "alpaca_trader_rs"
path = "src/lib.rs"

[dependencies]
# Library
tokio             = { version = "1",    features = ["full"] }
reqwest           = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
dotenvy           = "0.15"
anyhow            = "1"
chrono            = { version = "0.4",  features = ["serde"] }
futures           = "0.3"
tokio-util        = { version = "0.7",  features = ["rt"] }

# App
ratatui    = "0.30"
crossterm  = { version = "0.28", features = ["event-stream"] }

[dev-dependencies]
wiremock   = "0.6"
tokio-test = "0.4"
temp-env   = "0.3"
