[package]
name = "alpaca-trader-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Alpaca Markets trading toolkit — async REST client library and interactive TUI trading terminal"
repository = "https://github.com/arunkumar-mourougappane/alpaca-trader-rs"
homepage = "https://github.com/arunkumar-mourougappane/alpaca-trader-rs"
documentation = "https://docs.rs/alpaca-trader-rs"
readme = "README.md"
keywords = ["alpaca", "trading", "finance", "tui", "rest"]
categories = ["finance", "command-line-utilities", "api-bindings", "asynchronous"]
exclude = [
    "docs/",
    ".github/",
    ".env.example",
    "run.sh",
    "tests/",
]

[[bin]]
name = "alpaca-trader"
path = "src/main.rs"

[lib]
name = "alpaca_trader_rs"
path = "src/lib.rs"

[dependencies]
# Library
tokio             = { version = "1",    features = ["full"] }
reqwest           = { version = "0.13", features = ["json", "query"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
dotenvy           = "0.15"
anyhow            = "1"
chrono            = { version = "0.4",  features = ["serde"] }
futures           = "0.3"
tokio-util        = { version = "0.7",  features = ["rt"] }

# App
ratatui    = "0.30"
crossterm  = { version = "0.29", features = ["event-stream"] }
clap       = { version = "4", features = ["derive"] }
rpassword  = "7"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
syslog             = "6"
dirs               = "6"

# Platform-conditional keychain storage (no C-library dependency on any platform)
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# linux-native uses kernel keyutils — cross-compiles cleanly; no libdbus required
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
wiremock   = "0.6"
tokio-test = "0.4"
temp-env   = "0.3"

[profile.release]
opt-level     = 3
lto           = "thin"   # link-time optimisation across crates
codegen-units = 1        # maximise inlining at cost of compile time
strip         = "symbols" # remove debug symbols from release binary
